--- a/pages/teste.html
+++ b/pages/teste.html
@@ -7,7 +7,8 @@
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="./css/movie-content.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/movie-content.css">
 </head>
 
 <body>
@@ -18,38 +19,58 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeMovieContent()">&times;</a>
       
         <!-- Overlay content -->
-        <div class="overlay-content">
-          <!-- <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Clients</a>
-          <a href="#">Contact</a> -->
-          <div class="container-fluid">
-            <div class="container overlay-font">
-                <div class="row">
-                    <div class="col">
-                        <div class="poster float-left">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP6Mg3v2AfdPxqsFG1_6U69knBhHzaK-ttGeHC5FER_ueTvsZSgFEUiWM" width="220" height="342">
+        <div class="overlay-content overlay-font">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="poster float-left">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP6Mg3v2AfdPxqsFG1_6U69knBhHzaK-ttGeHC5FER_ueTvsZSgFEUiWM" width="220" height="342">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 movie-content mt-1">
-                        <div class="movie-title border-0 rounded">
-                            <span>
-                                Vingadores: Guerra Infinita
-                            </span>
-                        </div>
-                        <div class="movie-description border-0 rounded">
-                            <span>
-                                Homem de Ferro, Thor, Hulk e os Vingadores se unem para combater seu inimigo mais poderoso, o maligno Thanos. Em uma missão para coletar todas as seis pedras infinitas, Thanos planeja usá-las para infligir sua vontade maléfica sobre a realidade.
-                            </span>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="movie-trailer float-right">
-                            <div class="scale-media embed-responsive embed-responsive-16by9" id="trailer-video-container"></div>
+                        <div class="col-md-9 movie-content mt-1">
+                            <div class="movie-title pb-3">
+                                <span>
+                                    Vingadores: Guerra Infinita
+                                </span>
+                            </div>
+                            <div class="movie-description pb-3">
+                                <span>
+                                    Homem de Ferro, Thor, Hulk e os Vingadores se unem para combater seu inimigo mais poderoso, o maligno Thanos. Em uma missão para coletar todas as seis pedras infinitas, Thanos planeja usá-las para infligir sua vontade maléfica sobre a realidade.
+                                </span>
+                            </div>
+                            <div class="movie-info">
+                                <label>Data de Lançamento:</label>
+                                <span>02/02/1200</span>
+                            </div>
+                            <div class="movie-info">
+                                <label>Data de Lançamento:</label>
+                                <span>02/02/1200</span>
+                            </div>
+                            <div class="movie-info">
+                                <label>Data de Lançamento:</label>
+                                <span>02/02/1200</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="container">
+                    <div class="row mt-5 border-bottom">
+                        <div class="movie-trailer-desc">
+                            <span class="movie-subtitle">Trailer</span>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-4 col-md-2"></div>
+                        <div class="col-7 col-md-8">
+                            <div class="movie-trailer">
+                                <div class="embed-responsive embed-responsive-16by9" id="trailer-video-container"></div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-md-2"></div>    
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -65,15 +86,25 @@
     </nav>
     <div class="container">
         <!-- <div class="col-md-6 col-lg-4 movie-tile text-center" onclick="openMovieContent()"> -->
-        <div class="col-md-6 col-lg-4 movie-tile text-center" onclick="openMovieContent()" data-trailer-youtube-id="bla" data-toggle="modal" data-target="#trailer">
+        <div class="col-md-6 col-lg-4 movie-tile text-center" onclick="openMovieContent()" data-trailer-youtube-id="QwievZ1Tx-8" data-toggle="modal" data-target="#trailer">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP6Mg3v2AfdPxqsFG1_6U69knBhHzaK-ttGeHC5FER_ueTvsZSgFEUiWM" width="220" height="342">
             <h2>Vingadores: Guerra Infinita</h2>
         </div>
+
+        <div class="col-md-6 col-lg-4 movie-tile text-center" onclick="openMovieContent()" data-trailer-youtube-id="QwievZ1Tx-8" data-toggle="modal" data-target="#trailer">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP6Mg3v2AfdPxqsFG1_6U69knBhHzaK-ttGeHC5FER_ueTvsZSgFEUiWM" width="220" height="342">
+                <h2>Vingadores: Guerra Infinita</h2>
+            </div>
+
+            <div class="col-md-6 col-lg-4 movie-tile text-center" onclick="openMovieContent()" data-trailer-youtube-id="QwievZ1Tx-8" data-toggle="modal" data-target="#trailer">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP6Mg3v2AfdPxqsFG1_6U69knBhHzaK-ttGeHC5FER_ueTvsZSgFEUiWM" width="220" height="342">
+                    <h2>Vingadores: Guerra Infinita</h2>
+                </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="./js/movie-content.js"></script>
+    <script src="../js/movie-content.js"></script>
   </body>
 </html>
